Fix horizontal overflow in list of transactions on smaller screens

--- a/resources/assets/sass/components/row.scss
+++ b/resources/assets/sass/components/row.scss
@@ -48,6 +48,14 @@
             &:first-child {
                 margin-top: 0;
             }
+
+            &.row__column--middle {
+                align-self: flex-start;
+            }
+        }
+
+        > .row.row--right {
+            justify-content: flex-start;
         }
     }
 }
